<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsapp.ui.Bcc.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newsapp.ui.gallery.GalleryFragment"
        android:label="@string/aljezira"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newsapp.ui.slideshow.SlideshowFragment"
        android:label="@string/ncc"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/foxnews"
        android:name="com.example.newsapp.Fragments.FoxFragment"
        android:label="fox"
        tools:layout="@layout/fragment_fox" />
    <fragment
        android:id="@+id/skynews"
        android:name="com.example.newsapp.Fragments.SkyFragment"
        android:label="sky"
        tools:layout="@layout/fragment_sky" />
</navigation>